--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pre-entrega1",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/app.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +23,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
